--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,7 @@
 {
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "plugin:prettier/recommended"
-  ],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true }]
-  },
+  "extends": ["react-app", "react-app/jest"],
+
+  "rules": {},
   "env": {
     "browser": true,
     "node": true,
